parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    DO
    EACH
    ENSURE
    IN
    INCLUDE
    PUSH
    QUESTION
    SEARCH
    SELF

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> asignacion
Rule 2     instrucciones -> expression
Rule 3     instrucciones -> funciones
Rule 4     instrucciones -> comparacion
Rule 5     instrucciones -> condicional
Rule 6     instrucciones -> while
Rule 7     instrucciones -> impresion
Rule 8     instrucciones -> input
Rule 9     instrucciones -> callFuncion
Rule 10    instrucciones -> addValueHash
Rule 11    instrucciones -> modValueHash
Rule 12    instrucciones -> deleteValueHash
Rule 13    instrucciones -> insertArray
Rule 14    instrucciones -> deleteArray
Rule 15    cuerpo -> asignacion
Rule 16    cuerpo -> expression
Rule 17    cuerpo -> comparacion
Rule 18    cuerpo -> condicional
Rule 19    cuerpo -> impresion
Rule 20    cuerpo -> input
Rule 21    cuerpo -> callFuncion
Rule 22    cuerpo -> addValueHash
Rule 23    cuerpo -> modValueHash
Rule 24    cuerpo -> deleteValueHash
Rule 25    cuerpo -> insertArray
Rule 26    cuerpo -> deleteArray
Rule 27    asignacion -> VARIABLE ASIGN expression
Rule 28    asignacion -> VARIABLE ASIGN comparacion
Rule 29    asignacion -> VARIABLE ASIGN callFuncion
Rule 30    asignacion -> VARIABLE ASIGN diccionario
Rule 31    asignacion -> VARIABLE ASIGN getValueHash
Rule 32    asignacion -> VARIABLE ASIGN array
Rule 33    expression -> term
Rule 34    expression -> boleano
Rule 35    term -> factor
Rule 36    factor -> NUMBER
Rule 37    factor -> STRING
Rule 38    factor -> FLOAT
Rule 39    factor -> VARIABLE
Rule 40    factor -> LPAR expression RPAR
Rule 41    expression -> expression PLUS term
Rule 42    expression -> expression MINUS term
Rule 43    term -> term TIMES factor
Rule 44    term -> term DIVIDE factor
Rule 45    term -> term EXPONENTIATION factor
Rule 46    comparacion -> expression comparador expression
Rule 47    comparacion -> expression comparador expression AND comparacion
Rule 48    comparacion -> expression comparador expression OR comparacion
Rule 49    comparador -> GREATER
Rule 50    comparador -> GREATER_OR_EQUAL
Rule 51    comparador -> MINOR
Rule 52    comparador -> MINOR_OR_EQUAL
Rule 53    comparador -> ASIGN ASIGN
Rule 54    comparador -> NOT ASIGN
Rule 55    condicional -> IF comparacion D_POINT cuerpo END
Rule 56    condicional -> IF comparacion D_POINT cuerpo END cond_else
Rule 57    cond_else -> ELSE D_POINT cuerpo END
Rule 58    impresion -> PUTS STRING
Rule 59    input -> VARIABLE ASIGN GETS
Rule 60    parametros -> VARIABLE
Rule 61    parametros -> VARIABLE COMMA parametros
Rule 62    encabezado -> DEF VARIABLE LPAR RPAR
Rule 63    encabezado -> DEF VARIABLE LPAR parametros RPAR
Rule 64    funciones -> encabezado cuerpo END
Rule 65    funciones -> encabezado RETURN expression END
Rule 66    funciones -> encabezado cuerpo RETURN expression END
Rule 67    callFuncion -> VARIABLE LPAR RPAR
Rule 68    callFuncion -> VARIABLE LPAR parametros RPAR
Rule 69    boleano -> TRUE
Rule 70    boleano -> FALSE
Rule 71    diccionario -> LKEY cuerpoHash RKEY
Rule 72    cuerpoHash -> expression ASIGN GREATER expression
Rule 73    cuerpoHash -> expression ASIGN GREATER expression COMMA cuerpoHash
Rule 74    getValueHash -> VARIABLE LCOR expression RCOR
Rule 75    addValueHash -> VARIABLE LCOR expression RCOR ASIGN expression
Rule 76    modValueHash -> VARIABLE LCOR expression RCOR ASIGN expression
Rule 77    deleteValueHash -> VARIABLE POINT DELETE LPAR expression RPAR
Rule 78    while -> WHILE LPAR comparacion RPAR cuerpo END
Rule 79    while -> WHILE LPAR comparacion RPAR cuerpo END while
Rule 80    parametrosA -> factor
Rule 81    parametrosA -> factor COMMA parametrosA
Rule 82    array -> LCOR parametrosA RCOR
Rule 83    array -> LCOR RCOR
Rule 84    argumentosA -> NUMBER
Rule 85    argumentosA -> NUMBER COMMA factor
Rule 86    insertArray -> VARIABLE POINT INSERT LPAR argumentosA RPAR
Rule 87    deleteArray -> VARIABLE POINT DELETE_AT LPAR NUMBER RPAR

Terminals, with rules where they appear

ALIAS                : 
AND                  : 47
ASIGN                : 27 28 29 30 31 32 53 53 54 59 72 73 75 76
COMMA                : 61 73 81 85
DEF                  : 62 63
DELETE               : 77
DELETE_AT            : 87
DIVIDE               : 44
DO                   : 
D_POINT              : 55 56 57
EACH                 : 
ELSE                 : 57
END                  : 55 56 57 64 65 66 78 79
ENSURE               : 
EXPONENTIATION       : 45
FALSE                : 70
FLOAT                : 38
GETS                 : 59
GREATER              : 49 72 73
GREATER_OR_EQUAL     : 50
IF                   : 55 56
IN                   : 
INCLUDE              : 
INSERT               : 86
LCOR                 : 74 75 76 82 83
LKEY                 : 71
LPAR                 : 40 62 63 67 68 77 78 79 86 87
MINOR                : 51
MINOR_OR_EQUAL       : 52
MINUS                : 42
NOT                  : 54
NUMBER               : 36 84 85 87
OR                   : 48
PLUS                 : 41
POINT                : 77 86 87
PUSH                 : 
PUTS                 : 58
QUESTION             : 
RCOR                 : 74 75 76 82 83
RETURN               : 65 66
RKEY                 : 71
RPAR                 : 40 62 63 67 68 77 78 79 86 87
SEARCH               : 
SELF                 : 
STRING               : 37 58
TIMES                : 43
TRUE                 : 69
VARIABLE             : 27 28 29 30 31 32 39 59 60 61 62 63 67 68 74 75 76 77 86 87
WHILE                : 78 79
error                : 

Nonterminals, with rules where they appear

addValueHash         : 10 22
argumentosA          : 86
array                : 32
asignacion           : 1 15
boleano              : 34
callFuncion          : 9 21 29
comparacion          : 4 17 28 47 48 55 56 78 79
comparador           : 46 47 48
cond_else            : 56
condicional          : 5 18
cuerpo               : 55 56 57 64 66 78 79
cuerpoHash           : 71 73
deleteArray          : 14 26
deleteValueHash      : 12 24
diccionario          : 30
encabezado           : 64 65 66
expression           : 2 16 27 40 41 42 46 46 47 47 48 48 65 66 72 72 73 73 74 75 75 76 76 77
factor               : 35 43 44 45 80 81 85
funciones            : 3
getValueHash         : 31
impresion            : 7 19
input                : 8 20
insertArray          : 13 25
instrucciones        : 0
modValueHash         : 11 23
parametros           : 61 63 68
parametrosA          : 81 82
term                 : 33 41 42 43 44 45
while                : 6 79

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . asignacion
    (2) instrucciones -> . expression
    (3) instrucciones -> . funciones
    (4) instrucciones -> . comparacion
    (5) instrucciones -> . condicional
    (6) instrucciones -> . while
    (7) instrucciones -> . impresion
    (8) instrucciones -> . input
    (9) instrucciones -> . callFuncion
    (10) instrucciones -> . addValueHash
    (11) instrucciones -> . modValueHash
    (12) instrucciones -> . deleteValueHash
    (13) instrucciones -> . insertArray
    (14) instrucciones -> . deleteArray
    (27) asignacion -> . VARIABLE ASIGN expression
    (28) asignacion -> . VARIABLE ASIGN comparacion
    (29) asignacion -> . VARIABLE ASIGN callFuncion
    (30) asignacion -> . VARIABLE ASIGN diccionario
    (31) asignacion -> . VARIABLE ASIGN getValueHash
    (32) asignacion -> . VARIABLE ASIGN array
    (33) expression -> . term
    (34) expression -> . boleano
    (41) expression -> . expression PLUS term
    (42) expression -> . expression MINUS term
    (64) funciones -> . encabezado cuerpo END
    (65) funciones -> . encabezado RETURN expression END
    (66) funciones -> . encabezado cuerpo RETURN expression END
    (46) comparacion -> . expression comparador expression
    (47) comparacion -> . expression comparador expression AND comparacion
    (48) comparacion -> . expression comparador expression OR comparacion
    (55) condicional -> . IF comparacion D_POINT cuerpo END
    (56) condicional -> . IF comparacion D_POINT cuerpo END cond_else
    (78) while -> . WHILE LPAR comparacion RPAR cuerpo END
    (79) while -> . WHILE LPAR comparacion RPAR cuerpo END while
    (58) impresion -> . PUTS STRING
    (59) input -> . VARIABLE ASIGN GETS
    (67) callFuncion -> . VARIABLE LPAR RPAR
    (68) callFuncion -> . VARIABLE LPAR parametros RPAR
    (75) addValueHash -> . VARIABLE LCOR expression RCOR ASIGN expression
    (76) modValueHash -> . VARIABLE LCOR expression RCOR ASIGN expression
    (77) deleteValueHash -> . VARIABLE POINT DELETE LPAR expression RPAR
    (86) insertArray -> . VARIABLE POINT INSERT LPAR argumentosA RPAR
    (87) deleteArray -> . VARIABLE POINT DELETE_AT LPAR NUMBER RPAR
    (35) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) term -> . term EXPONENTIATION factor
    (69) boleano -> . TRUE
    (70) boleano -> . FALSE
    (62) encabezado -> . DEF VARIABLE LPAR RPAR
    (63) encabezado -> . DEF VARIABLE LPAR parametros RPAR
    (36) factor -> . NUMBER
    (37) factor -> . STRING
    (38) factor -> . FLOAT
    (39) factor -> . VARIABLE
    (40) factor -> . LPAR expression RPAR

    VARIABLE        shift and go to state 16
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    PUTS            shift and go to state 23
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    DEF             shift and go to state 29
    NUMBER          shift and go to state 25
    STRING          shift and go to state 24
    FLOAT           shift and go to state 30
    LPAR            shift and go to state 22

    instrucciones                  shift and go to state 1
    asignacion                     shift and go to state 2
    expression                     shift and go to state 3
    funciones                      shift and go to state 4
    comparacion                    shift and go to state 5
    condicional                    shift and go to state 6
    while                          shift and go to state 7
    impresion                      shift and go to state 8
    input                          shift and go to state 9
    callFuncion                    shift and go to state 10
    addValueHash                   shift and go to state 11
    modValueHash                   shift and go to state 12
    deleteValueHash                shift and go to state 13
    insertArray                    shift and go to state 14
    deleteArray                    shift and go to state 15
    term                           shift and go to state 17
    boleano                        shift and go to state 18
    encabezado                     shift and go to state 19
    factor                         shift and go to state 26

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> asignacion .

    $end            reduce using rule 1 (instrucciones -> asignacion .)


state 3

    (2) instrucciones -> expression .
    (41) expression -> expression . PLUS term
    (42) expression -> expression . MINUS term
    (46) comparacion -> expression . comparador expression
    (47) comparacion -> expression . comparador expression AND comparacion
    (48) comparacion -> expression . comparador expression OR comparacion
    (49) comparador -> . GREATER
    (50) comparador -> . GREATER_OR_EQUAL
    (51) comparador -> . MINOR
    (52) comparador -> . MINOR_OR_EQUAL
    (53) comparador -> . ASIGN ASIGN
    (54) comparador -> . NOT ASIGN

    $end            reduce using rule 2 (instrucciones -> expression .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    GREATER         shift and go to state 34
    GREATER_OR_EQUAL shift and go to state 35
    MINOR           shift and go to state 36
    MINOR_OR_EQUAL  shift and go to state 37
    ASIGN           shift and go to state 38
    NOT             shift and go to state 39

    comparador                     shift and go to state 33

state 4

    (3) instrucciones -> funciones .

    $end            reduce using rule 3 (instrucciones -> funciones .)


state 5

    (4) instrucciones -> comparacion .

    $end            reduce using rule 4 (instrucciones -> comparacion .)


state 6

    (5) instrucciones -> condicional .

    $end            reduce using rule 5 (instrucciones -> condicional .)


state 7

    (6) instrucciones -> while .

    $end            reduce using rule 6 (instrucciones -> while .)


state 8

    (7) instrucciones -> impresion .

    $end            reduce using rule 7 (instrucciones -> impresion .)


state 9

    (8) instrucciones -> input .

    $end            reduce using rule 8 (instrucciones -> input .)


state 10

    (9) instrucciones -> callFuncion .

    $end            reduce using rule 9 (instrucciones -> callFuncion .)


state 11

    (10) instrucciones -> addValueHash .

    $end            reduce using rule 10 (instrucciones -> addValueHash .)


state 12

    (11) instrucciones -> modValueHash .

    $end            reduce using rule 11 (instrucciones -> modValueHash .)


state 13

    (12) instrucciones -> deleteValueHash .

    $end            reduce using rule 12 (instrucciones -> deleteValueHash .)


state 14

    (13) instrucciones -> insertArray .

    $end            reduce using rule 13 (instrucciones -> insertArray .)


state 15

    (14) instrucciones -> deleteArray .

    $end            reduce using rule 14 (instrucciones -> deleteArray .)


state 16

    (27) asignacion -> VARIABLE . ASIGN expression
    (28) asignacion -> VARIABLE . ASIGN comparacion
    (29) asignacion -> VARIABLE . ASIGN callFuncion
    (30) asignacion -> VARIABLE . ASIGN diccionario
    (31) asignacion -> VARIABLE . ASIGN getValueHash
    (32) asignacion -> VARIABLE . ASIGN array
    (59) input -> VARIABLE . ASIGN GETS
    (67) callFuncion -> VARIABLE . LPAR RPAR
    (68) callFuncion -> VARIABLE . LPAR parametros RPAR
    (75) addValueHash -> VARIABLE . LCOR expression RCOR ASIGN expression
    (76) modValueHash -> VARIABLE . LCOR expression RCOR ASIGN expression
    (77) deleteValueHash -> VARIABLE . POINT DELETE LPAR expression RPAR
    (86) insertArray -> VARIABLE . POINT INSERT LPAR argumentosA RPAR
    (87) deleteArray -> VARIABLE . POINT DELETE_AT LPAR NUMBER RPAR
    (39) factor -> VARIABLE .

  ! shift/reduce conflict for ASIGN resolved as shift
    ASIGN           shift and go to state 40
    LPAR            shift and go to state 41
    LCOR            shift and go to state 42
    POINT           shift and go to state 43
    TIMES           reduce using rule 39 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 39 (factor -> VARIABLE .)
    EXPONENTIATION  reduce using rule 39 (factor -> VARIABLE .)
    PLUS            reduce using rule 39 (factor -> VARIABLE .)
    MINUS           reduce using rule 39 (factor -> VARIABLE .)
    GREATER         reduce using rule 39 (factor -> VARIABLE .)
    GREATER_OR_EQUAL reduce using rule 39 (factor -> VARIABLE .)
    MINOR           reduce using rule 39 (factor -> VARIABLE .)
    MINOR_OR_EQUAL  reduce using rule 39 (factor -> VARIABLE .)
    NOT             reduce using rule 39 (factor -> VARIABLE .)
    $end            reduce using rule 39 (factor -> VARIABLE .)
    END             reduce using rule 39 (factor -> VARIABLE .)
    RETURN          reduce using rule 39 (factor -> VARIABLE .)

  ! ASIGN           [ reduce using rule 39 (factor -> VARIABLE .) ]


state 17

    (33) expression -> term .
    (43) term -> term . TIMES factor
    (44) term -> term . DIVIDE factor
    (45) term -> term . EXPONENTIATION factor

    PLUS            reduce using rule 33 (expression -> term .)
    MINUS           reduce using rule 33 (expression -> term .)
    GREATER         reduce using rule 33 (expression -> term .)
    GREATER_OR_EQUAL reduce using rule 33 (expression -> term .)
    MINOR           reduce using rule 33 (expression -> term .)
    MINOR_OR_EQUAL  reduce using rule 33 (expression -> term .)
    ASIGN           reduce using rule 33 (expression -> term .)
    NOT             reduce using rule 33 (expression -> term .)
    $end            reduce using rule 33 (expression -> term .)
    END             reduce using rule 33 (expression -> term .)
    RETURN          reduce using rule 33 (expression -> term .)
    RPAR            reduce using rule 33 (expression -> term .)
    AND             reduce using rule 33 (expression -> term .)
    OR              reduce using rule 33 (expression -> term .)
    D_POINT         reduce using rule 33 (expression -> term .)
    RCOR            reduce using rule 33 (expression -> term .)
    COMMA           reduce using rule 33 (expression -> term .)
    RKEY            reduce using rule 33 (expression -> term .)
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45
    EXPONENTIATION  shift and go to state 46


state 18

    (34) expression -> boleano .

    PLUS            reduce using rule 34 (expression -> boleano .)
    MINUS           reduce using rule 34 (expression -> boleano .)
    GREATER         reduce using rule 34 (expression -> boleano .)
    GREATER_OR_EQUAL reduce using rule 34 (expression -> boleano .)
    MINOR           reduce using rule 34 (expression -> boleano .)
    MINOR_OR_EQUAL  reduce using rule 34 (expression -> boleano .)
    ASIGN           reduce using rule 34 (expression -> boleano .)
    NOT             reduce using rule 34 (expression -> boleano .)
    $end            reduce using rule 34 (expression -> boleano .)
    END             reduce using rule 34 (expression -> boleano .)
    RETURN          reduce using rule 34 (expression -> boleano .)
    RPAR            reduce using rule 34 (expression -> boleano .)
    AND             reduce using rule 34 (expression -> boleano .)
    OR              reduce using rule 34 (expression -> boleano .)
    D_POINT         reduce using rule 34 (expression -> boleano .)
    RCOR            reduce using rule 34 (expression -> boleano .)
    COMMA           reduce using rule 34 (expression -> boleano .)
    RKEY            reduce using rule 34 (expression -> boleano .)


state 19

    (64) funciones -> encabezado . cuerpo END
    (65) funciones -> encabezado . RETURN expression END
    (66) funciones -> encabezado . cuerpo RETURN expression END
    (15) cuerpo -> . asignacion
    (16) cuerpo -> . expression
    (17) cuerpo -> . comparacion
    (18) cuerpo -> . condicional
    (19) cuerpo -> . impresion
    (20) cuerpo -> . input
    (21) cuerpo -> . callFuncion
    (22) cuerpo -> . addValueHash
    (23) cuerpo -> . modValueHash
    (24) cuerpo -> . deleteValueHash
    (25) cuerpo -> . insertArray
    (26) cuerpo -> . deleteArray
    (27) asignacion -> . VARIABLE ASIGN expression
    (28) asignacion -> . VARIABLE ASIGN comparacion
    (29) asignacion -> . VARIABLE ASIGN callFuncion
    (30) asignacion -> . VARIABLE ASIGN diccionario
    (31) asignacion -> . VARIABLE ASIGN getValueHash
    (32) asignacion -> . VARIABLE ASIGN array
    (33) expression -> . term
    (34) expression -> . boleano
    (41) expression -> . expression PLUS term
    (42) expression -> . expression MINUS term
    (46) comparacion -> . expression comparador expression
    (47) comparacion -> . expression comparador expression AND comparacion
    (48) comparacion -> . expression comparador expression OR comparacion
    (55) condicional -> . IF comparacion D_POINT cuerpo END
    (56) condicional -> . IF comparacion D_POINT cuerpo END cond_else
    (58) impresion -> . PUTS STRING
    (59) input -> . VARIABLE ASIGN GETS
    (67) callFuncion -> . VARIABLE LPAR RPAR
    (68) callFuncion -> . VARIABLE LPAR parametros RPAR
    (75) addValueHash -> . VARIABLE LCOR expression RCOR ASIGN expression
    (76) modValueHash -> . VARIABLE LCOR expression RCOR ASIGN expression
    (77) deleteValueHash -> . VARIABLE POINT DELETE LPAR expression RPAR
    (86) insertArray -> . VARIABLE POINT INSERT LPAR argumentosA RPAR
    (87) deleteArray -> . VARIABLE POINT DELETE_AT LPAR NUMBER RPAR
    (35) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) term -> . term EXPONENTIATION factor
    (69) boleano -> . TRUE
    (70) boleano -> . FALSE
    (36) factor -> . NUMBER
    (37) factor -> . STRING
    (38) factor -> . FLOAT
    (39) factor -> . VARIABLE
    (40) factor -> . LPAR expression RPAR

    RETURN          shift and go to state 48
    VARIABLE        shift and go to state 16
    IF              shift and go to state 20
    PUTS            shift and go to state 23
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    NUMBER          shift and go to state 25
    STRING          shift and go to state 24
    FLOAT           shift and go to state 30
    LPAR            shift and go to state 22

    cuerpo                         shift and go to state 47
    expression                     shift and go to state 49
    asignacion                     shift and go to state 50
    comparacion                    shift and go to state 51
    condicional                    shift and go to state 52
    impresion                      shift and go to state 53
    input                          shift and go to state 54
    callFuncion                    shift and go to state 55
    addValueHash                   shift and go to state 56
    modValueHash                   shift and go to state 57
    deleteValueHash                shift and go to state 58
    insertArray                    shift and go to state 59
    deleteArray                    shift and go to state 60
    term                           shift and go to state 17
    boleano                        shift and go to state 18
    factor                         shift and go to state 26

state 20

    (55) condicional -> IF . comparacion D_POINT cuerpo END
    (56) condicional -> IF . comparacion D_POINT cuerpo END cond_else
    (46) comparacion -> . expression comparador expression
    (47) comparacion -> . expression comparador expression AND comparacion
    (48) comparacion -> . expression comparador expression OR comparacion
    (33) expression -> . term
    (34) expression -> . boleano
    (41) expression -> . expression PLUS term
    (42) expression -> . expression MINUS term
    (35) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) term -> . term EXPONENTIATION factor
    (69) boleano -> . TRUE
    (70) boleano -> . FALSE
    (36) factor -> . NUMBER
    (37) factor -> . STRING
    (38) factor -> . FLOAT
    (39) factor -> . VARIABLE
    (40) factor -> . LPAR expression RPAR

    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    NUMBER          shift and go to state 25
    STRING          shift and go to state 24
    FLOAT           shift and go to state 30
    VARIABLE        shift and go to state 63
    LPAR            shift and go to state 22

    comparacion                    shift and go to state 61
    expression                     shift and go to state 62
    term                           shift and go to state 17
    boleano                        shift and go to state 18
    factor                         shift and go to state 26

state 21

    (78) while -> WHILE . LPAR comparacion RPAR cuerpo END
    (79) while -> WHILE . LPAR comparacion RPAR cuerpo END while

    LPAR            shift and go to state 64


state 22

    (40) factor -> LPAR . expression RPAR
    (33) expression -> . term
    (34) expression -> . boleano
    (41) expression -> . expression PLUS term
    (42) expression -> . expression MINUS term
    (35) term -> . factor
    (43) term -> . term TIMES factor
    (44) term -> . term DIVIDE factor
    (45) term -> . term EXPONENTIATION factor
    (69) boleano -> . TRUE
    (70) boleano -> . FALSE
    (36) factor -> . NUMBER
    (37) factor -> . STRING
    (38) factor -> . FLOAT
    (39) factor -> . VARIABLE
    (40) factor -> . LPAR expression RPAR

    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    NUMBER          shift and go to state 25
    STRING          shift and go to state 24
    FLOAT           shift and go to state 30
    VARIABLE        shift and go to state 63
    LPAR            shift and go to state 22

    expression                     shift and go to state 65
    term                           shift and go to state 17
    boleano                        shift and go to state 18
    factor                         shift and go to state 26

state 23

    (58) impresion -> PUTS . STRING

    STRING          shift and go to state 66


state 24

    (37) factor -> STRING .
